Use OpenRewrite to migrate code to Java 17