@@ -384,7 +384,7 @@ public class GtfsRelationalDaoImpl extends GtfsDaoImpl implements GtfsMutableRel
       if (valuesForKey == null) {
 
         try {
-          valuesForKey = collectionType.newInstance();
+          valuesForKey = collectionType.getDeclaredConstructor().newInstance();
         } catch (Exception ex) {
           throw new EntityInstantiationException(collectionType, ex);
         }
